--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^6.0.0",
+    "class-validator": "^0.14.2",
     "cloudinary": "^2.6.1",
     "mongoose": "^8.15.2",
     "morgan": "^1.10.0",
