--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.58.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
+    "react-web-share": "^2.0.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.64"
