--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "frontend",
+  "name": "my-tube",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "vercel-build": "npm install --force && next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -31,7 +30,6 @@
     "react-hook-form": "^7.58.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
-    "react-web-share": "^2.0.2",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.64"
