--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "docker:stop": "docker-compose down"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^9.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
