--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.6.1",
@@ -51,6 +52,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth2": "^0.1.10",
     "@types/passport-jwt": "^4.0.1",
+    "@types/passport-oauth2": "^1.4.17",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
