--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.6.1",
+    "google-auth-library": "^10.1.0",
     "mongoose": "^8.15.2",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
