--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.0",
     "react-player": "^2.16.0",
+    "react-quill-new": "^3.4.6",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
