--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "idb-keyval": "^6.2.2",
     "lucide-react": "^0.515.0",
     "media-icons": "^0.10.0",
     "moment": "^2.30.1",
