--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.6.1",
+    "form-data": "^4.0.4",
+    "get-video-duration": "^4.1.0",
     "google-auth-library": "^10.1.0",
     "mongoose": "^8.15.2",
     "morgan": "^1.10.0",
