--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
-    "api/**/*.js": {
-      "includeFiles": "node_modules/**"
+    "backend/api/**/*.js": {
+      "includeFiles": "backend/node_modules/**"
     }
   }
 }
