vercel config updated

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,9 @@
 {
   "functions": {
-    "backend/api/**/*.js": {
+    "backend/dist/api/**/*.js": {
+      "includeFiles": "backend/node_modules/**"
+    },
+    "backend/dist/**/*.js": {
       "includeFiles": "backend/node_modules/**"
     }
   }
